[gd_scene load_steps=3 format=3 uid="uid://c7rb5jscgpsa1"]

[ext_resource type="Script" uid="uid://7dqerwanvlev" path="res://addons/DansInventory/Inventory/Scenes/slot.gd" id="1_mntga"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mntga"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6

[node name="Slot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1120.0
offset_bottom = -616.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_mntga")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1

[node name="QuantityLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "x99"

[node name="FocusBorder" type="Panel" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mntga")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
